chore: refactor styling to use rem units && wraps links in list elements for correct font rendering && fixes font bug @ index.js && adds nav back to normalize.scss && navReducer now has an initial state of false && formatting change for svg

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,17 +1,10 @@
 @import '../../styles/colors.scss';
 
-//Variables
-$background: white;
-$bgAccent: #484a4d;
-$textColor: #dadce1;
-$navSize: 155px;
-$border: 1px solid #474a4d;
-
 .nav {
-  height: $navSize;
-  background-color: $background;
+  height: 10rem;
+  background-color: $white;
   padding: 0 1rem;
-  border-bottom: $border;
+  border-bottom: 1px solid $dark-grey;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -27,28 +20,28 @@ $border: 1px solid #474a4d;
 }
 
 .nav--logo {
-  height: $navSize * .67;
+  height: 6rem;
   color: $dark-purple;
 }
 
 .nav--txt__title {
+  font-weight: bolder;
   color: $dark-grey;
-  font-size: $navSize * .16;
+  font-size: 1.5rem;
   text-decoration: none;
   margin: 0;
   padding: 0;
 }
 
 .nav--txt__body {
-  color: #000000;
-  font-weight: 300;
-  font-size: $navSize * .11;
+  color: $black;
+  font-size: 1rem;
   margin: 0;
   padding: 0;
 }
 
 .nav--links {
-  width: $navSize * 5;
+  width: 55%;
   list-style: none;
   margin: 0;
   padding: 0;
@@ -61,7 +54,7 @@ $border: 1px solid #474a4d;
 }
 
 .nav--txt {
-  margin-left: $navSize * .1;
+  margin-left: 1rem;
   display: flex;
   flex-direction: column;
   font-size: 17px;
@@ -70,7 +63,7 @@ $border: 1px solid #474a4d;
 }
 
 .nav--link {
-  color: #000000;
+  color: $black;
   text-decoration: none;
   text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.03);
 }
@@ -80,13 +73,12 @@ $border: 1px solid #474a4d;
 }
 
 .nav--link__txt {
-  width: $navSize * 0.7;
+  width: 7rem;
   display: flex;
   align-items: center;
   justify-content: center;
   font-weight: 300;
-  font-size: $navSize * .11;
-  line-height: $navSize * .16;
+  font-size: 1rem;
 }
 
 .nav--link__txt:hover {
@@ -104,9 +96,7 @@ $border: 1px solid #474a4d;
 }
 
 .donate--link__txt {
-  font-weight: 500;
-  font-size: $navSize * .11;
-  line-height: $navSize * .16;
+  font-size: 1rem;
   text-transform: uppercase;
   color: $dark-purple;
 }
@@ -117,20 +107,14 @@ $border: 1px solid #474a4d;
   z-index: 10;
   top: 100px;
   width: 200px;
-  background-color: $background;
+  background-color: $white;
   border: 1px solid rgba(0, 0, 0, 0.09);
   overflow: hidden;
 }
 
-.nav--dropdown__links {
-  display: flex;
-  flex-direction: column;
-  justify-content: start;
-}
-
 .nav--dropdown__link {
   text-decoration: none;
-  color: #000000;
+  color: $black;
   display: flex;
   align-items: center;
   padding: .2rem;
