--- a/src/styles/normalize.scss
+++ b/src/styles/normalize.scss
@@ -59,6 +59,7 @@ header,
 hgroup,
 main,
 menu,
+nav,
 section,
 summary {
   display: block;
